<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/flashWhite"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="236dp"
        android:layout_height="51dp"
        android:text="@string/iniciar_sesi_n"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="186dp"
        android:layout_height="179dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="297dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:background="@color/violetBlue"
        android:elevation="4dp"
        android:hint="@string/usuario"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.007" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="297dp"
        android:layout_height="49dp"
        android:layout_marginBottom="304dp"
        android:background="@color/violetBlue"
        android:elevation="4dp"
        android:hint="@string/contrase_a"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        app:layout_constraintVertical_bias="0.58"
        tools:ignore="TextFields" />

    <CheckBox
        android:id="@+id/checkboxRecordarme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:buttonTint="#000000"
        android:text="@string/recordarme"
        android:textColor="#0D47A1"
        app:layout_constraintBottom_toTopOf="@+id/btnGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintVertical_bias="0.413"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/btnGoogle"
        android:layout_width="51dp"
        android:layout_height="45dp"
        android:layout_marginBottom="164dp"
        android:background="@null"
        android:contentDescription="@string/bot_n_de_google"
        android:padding="8dp"
        android:scaleType="centerInside"
        android:src="@drawable/google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/btnFacebook"
        android:layout_width="51dp"
        android:layout_height="45dp"
        android:layout_marginBottom="164dp"
        android:background="@null"
        android:contentDescription="@string/bot_n_de_google"
        android:padding="8dp"
        android:scaleType="centerInside"
        android:src="@drawable/facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toEndOf="@+id/btnGoogle"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/btnGithub"
        android:layout_width="51dp"
        android:layout_height="45dp"
        android:layout_marginBottom="164dp"
        android:background="@null"
        android:contentDescription="@string/bot_n_de_google"
        android:padding="8dp"
        android:scaleType="centerInside"
        android:src="@drawable/github"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toEndOf="@+id/btnFacebook"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/btnLinkedin"
        android:layout_width="51dp"
        android:layout_height="45dp"
        android:layout_marginBottom="164dp"
        android:background="@null"
        android:contentDescription="@string/bot_n_de_google"
        android:padding="8dp"
        android:scaleType="centerInside"
        android:src="@drawable/linkedin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.337"
        app:layout_constraintStart_toEndOf="@+id/btnGithub"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/violetBlue"
        android:elevation="4dp"
        android:text="@string/iniciar_sesion"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFacebook"
        app:layout_constraintVertical_bias="0.298" />

    <Button
        android:id="@+id/btnGoRegistro"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/violetBlue"
        android:elevation="4dp"
        android:text="@string/Registrarse"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFacebook"
        app:layout_constraintVertical_bias="0.298" />


</androidx.constraintlayout.widget.ConstraintLayout>