<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textClient"
        android:layout_width="106dp"
        android:layout_height="25dp"
        android:scaleType="centerInside"
        android:text="@string/clientes"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/textProducts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372" />

    <TextView
        android:id="@+id/textProducts"
        android:layout_width="236dp"
        android:layout_height="51dp"
        android:text="@string/productos"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.619" />

    <!--Primer producto-->

    <!-- SEGUNDO PRODUCTO SE DEBE QUITAR -->

    <ImageButton
        android:id="@+id/btnSearch"
        android:layout_width="47dp"
        android:layout_height="49dp"
        android:background="@null"
        android:contentDescription="@string/btn_search"
        android:padding="8dp"
        android:scaleType="centerInside"
        android:src="@drawable/searh"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toEndOf="@+id/textProducts"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.577"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="387dp"
        android:layout_height="181dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.763"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageProducto2"
            android:layout_width="100dp"
            android:layout_height="118dp"
            android:contentDescription="Imagen del producto"
            android:scaleType="centerInside"
            android:src="@drawable/jabon" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="8dp">

            <TextView
                android:id="@+id/textNombreProducto2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Jabón"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textDescripcionProducto2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="Shampoo de limpieza suave que elimina impurezas, hidrata el cuero cabelludo y deja el cabello limpio, brillante y con una sensación de frescura."
                android:textSize="14sp" />

            <Button
                android:id="@+id/buttonAgregar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/violetBlue"
                android:text="@string/agregar_al_carrito"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <Button
                android:id="@+id/buttonVerMas2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:backgroundTint="@color/violetBlue"
                android:text="@string/ver_m_s"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="387dp"
        android:layout_height="181dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageProducto"
            android:layout_width="100dp"
            android:layout_height="118dp"
            android:contentDescription="Imagen del producto"
            android:scaleType="centerInside"
            android:src="@drawable/shampoo" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="8dp">

            <TextView
                android:id="@+id/textNombreProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Shampoo"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textDescripcionProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="Shampoo de limpieza suave que elimina impurezas, hidrata el cuero cabelludo y deja el cabello limpio, brillante y con una sensación de frescura."
                android:textSize="14sp" />

            <Button
                android:id="@+id/buttonAgregar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/violetBlue"
                android:text="@string/agregar_al_carrito"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <Button
                android:id="@+id/buttonVerMas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:backgroundTint="@color/violetBlue"
                android:text="@string/ver_m_s"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>